--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
         <link href="static/css/_autograph.css" rel="stylesheet" />
     </head>
     <body>
+        <header class="header">
+            <div class="header-ls">
+                <div class="header-contacts">
+                    <div class="header-phones">
+                        +7 (926) 523-60-28<br/>
+                        07-269-70
+                    </div>
+                </div>
+                <div class="header-navigation">
+                    <a class="header-navigation-item" href="#">о нас</a>
+                    <a class="header-navigation-item" href="#">оптовикам</a>
+                    <a class="header-navigation-item" href="#">гарантия</a>
+                </div>
+            </div>
+            <span class="header-logo">&nbsp;</span>
+            <div class="header-rs">
+                <div class="header-contacts">
+                    <a href="#" class="header-icon header-icon__in"></a>
+                    <a href="#" class="header-icon header-icon__fb"></a>
+                </div>
+                <div class="header-navigation">
+                    <a class="header-navigation-item" href="#">где купить в розницу</a>
+                    <a class="header-navigation-item" href="#">контакты</a>
+                </div>
+            </div>
+        </header>
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-item"><a href="#">автомобильные<br/>чехлы</a></li>
+                <li class="navigation-item"><a href="#">меховые<br/>накидки</a></li>
+                <li class="navigation-item"><a href="#">автомобильные<br/>аксессуары</a></li>
+                <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
+            </ul>
+        </nav>
+
         <script src="http://yandex.st/jquery/1.9.1/jquery.min.js"></script>
         <script src="static/js/_app.js"></script>
     </body>
