--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
             </ul>
         </nav>
-
+        <footer class="footer">
+            © 2001—2014 «Автограф»
+            <a href="#" class="footer-more">А еще мы занимаемся<br/>перетяжкой салона</a>
+        </footer>
         <script src="http://yandex.st/jquery/1.9.1/jquery.min.js"></script>
         <script src="static/js/_app.js"></script>
     </body>
