--- a/index.html
+++ b/index.html
@@ -34,12 +34,113 @@
         </header>
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-item"><a href="#">автомобильные<br/>чехлы</a></li>
+                <li class="navigation-item"><a href="#" class="navigation-item__active">автомобильные<br/>чехлы</a></li>
                 <li class="navigation-item"><a href="#">меховые<br/>накидки</a></li>
                 <li class="navigation-item"><a href="#">автомобильные<br/>аксессуары</a></li>
                 <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
             </ul>
         </nav>
+        <section class="row row-shift">
+            <h1>автомобильные чехлы</h1>
+            <h3>Мы шьем автомобильные чехлы и продем их оптовым покупателям</h3>
+
+            <div class="downloads">
+                <div class="downloads-catalog">
+                    <div class="downloads-title">каталог<br/>продукции</div>
+                    <a href="#" class="downloads-link downloads-link__excel">
+                        Скачать ознакомительный каталог
+                        <span class="downloads-link-info">25 Кb, Еxcel</span>
+                    </a>
+                    <div class="downloads-catalog-access">Для получения полного каталога с прайсом необходимо заполнить заявку оптовика</div>
+                    <a href="#" class="arrow">Заполнить заявку</a>
+                </div>
+                <div class="downloads-instruction">
+                    <a href="#" class="downloads-link downloads-link__pdf">
+                        Скачать инструкцию по установке чехлов
+                        <span class="downloads-link-info">17 Кb, PDF</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="goods-behaviour">
+                <span class="goods-behaviour-img goods-behaviour-img__cover"></span>
+                <ul class="goods-behaviour-list">
+                    <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_1">Наши чехлы шьются на основе лекало собственной разработки, поэтому они отличаются высокой точностью и учитывают особенности каждой модели</li>
+                    <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_2">Мы используем только качественные материалы и крепления</li>
+                    <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_3">У нас очень богатый выбор цветов и рисунков материалов: экокожа, жаккард, алькантара</li>
+                </ul>
+            </div>
+            <div class="goods-about">
+                Все наши авточехлы модельные, то есть разработаны под конкретную марку автомобиля:
+            </div>
+        </section>
+        <section class="incut incut__covers">
+            <div class="row row-shift">
+                <ul class="covers-for">
+                    <li>Audi</li>
+                    <li>Honda</li>
+                    <li>Renault</li>
+                    <li>BMW</li>
+                    <li>Hyundai</li>
+                    <li>Skoda</li>
+                    <li>Chery</li>
+                    <li>Kia</li>
+                    <li>Subaru</li>
+                    <li>Chevrolet</li>
+                    <li>Rover</li>
+                    <li>Suzuki</li>
+                    <li>Citroen</li>
+                    <li>Mazda</li>
+                    <li>Toyota</li>
+                    <li>Daewoo</li>
+                    <li>Mercedes</li>
+                    <li>Volkswagen</li>
+                    <li>Fiat</li>
+                    <li>Mitsubishi</li>
+                    <li>ВАЗ (Лада)</li>
+                    <li>Ford</li>
+                    <li>Nissan</li>
+                    <li>ГАЗ</li>
+                    <li>Wall</li>
+                    <li>Opel</li>
+                    <li>УАЗ</li>
+                </ul>
+            </div>
+        </section>
+        <section class="row">
+            <div class="row-shift goods-info goods-info__covers">
+                В наших чехлах можно комбинировать материалы — экокожу и жаккард, экокожу и алькантара. Мы используем усиленные двойные швы что гарантирует надежность чехлов во время эксплуатации. Конструкция чехлов продумана таким образом, что бы, не нарушать заводскую функциональность салона.
+            </div>
+        </section>
+        <section class="row">
+            <div class="portfolio">
+                <img src="static/i/gallery.png">
+            </div>
+        </section>
+        <section class="row">
+            <div class="columns">
+                <div class="columns-item">
+                    <h2>Экокожа</h2>
+                    <p>Вид искусственной кожи, современный экологичный материал. Экокожа изготавливается путем нанесения на хлопчатобумажную тканную основу полиуретанового пленочного покрытия. Благодаря этому ткань не испытывает никаких механических нагрузок и растяжений, поэтому экокожа имеет очень подвижную структуру, замечательную мягкость и эластичность. Экокожа не трескается, не растягивается, и является очень прочным и износостойким материалом.</p>
+                    <p>В наших чехлах мы используем экокожу «АРИГОН»</p>
+                    <a href="#" class="columns-link">рекомендации по уходу</a>
+                </div>
+                <div class="columns-item">
+                    <h2>жаккард</h2>
+                    <p>Автомобильные чехлы из жаккарда весьма практичны – они легко чистятся с помощью пылесоса и хорошо переносят стирку при низкой температуре. Благодаря сложной структуре ткани, она практически не подвержена деформации. В результате чехлы долго сохраняют не только первоначальный цвет и фактуру, но и форму.</p>
+                    <a href="#" class="columns-link">рекомендации по уходу</a>
+                </div>
+                <div class="columns-item">
+                    <h2>Алькантара</h2>
+                    <p>Это продукт высокотехнологичного производства, эта ткань разработана японским ученым, и является уникальным материалом: пожаростойкая, надежная, долговечная, мягкая на ощупь, презентабельный вид. Алькантара не потеряет своего акуратного вида, на ней не появятся затяжки.</p>
+                    <a href="#" class="columns-link">рекомендации по уходу</a>
+                </div>
+            </div>
+            <div class="warranty">
+                <div class="warranty-separator"></div>
+                На все наши чехлы мы даем <b>гарантию 1 год</b>
+            </div>
+        </section>
         <footer class="footer">
             © 2001—2014 «Автограф»
             <a href="#" class="footer-more">А еще мы занимаемся<br/>перетяжкой салона</a>
