download block fix

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
                 <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
             </ul>
         </nav>
-        <section class="row row-shift">
-            <h1>автомобильные чехлы</h1>
-            <h3>Мы шьем автомобильные чехлы и продем их оптовым покупателям</h3>
+        <section class="row">
+            <div class="row-shift">
+                <h1>автомобильные чехлы</h1>
+                <h3>Мы шьем автомобильные чехлы и продем их оптовым покупателям</h3>
+            </div>
 
             <div class="downloads">
                 <div class="downloads-catalog">
@@ -62,16 +64,18 @@
                 </div>
             </div>
 
-            <div class="goods-behaviour">
-                <span class="goods-behaviour-img goods-behaviour-img__cover"></span>
-                <ul class="goods-behaviour-list">
-                    <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_1">Наши чехлы шьются на основе лекало собственной разработки, поэтому они отличаются высокой точностью и учитывают особенности каждой модели</li>
-                    <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_2">Мы используем только качественные материалы и крепления</li>
-                    <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_3">У нас очень богатый выбор цветов и рисунков материалов: экокожа, жаккард, алькантара</li>
-                </ul>
-            </div>
-            <div class="goods-about">
-                Все наши авточехлы модельные, то есть разработаны под конкретную марку автомобиля:
+            <div class="row-shift">
+                <div class="goods-behaviour">
+                    <span class="goods-behaviour-img goods-behaviour-img__cover"></span>
+                    <ul class="goods-behaviour-list">
+                        <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_1">Наши чехлы шьются на основе лекало собственной разработки, поэтому они отличаются высокой точностью и учитывают особенности каждой модели</li>
+                        <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_2">Мы используем только качественные материалы и крепления</li>
+                        <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_3">У нас очень богатый выбор цветов и рисунков материалов: экокожа, жаккард, алькантара</li>
+                    </ul>
+                </div>
+                <div class="goods-about">
+                    Все наши авточехлы модельные, то есть разработаны под конкретную марку автомобиля:
+                </div>
             </div>
         </section>
         <section class="incut incut__covers">
