minor fixes and link to store

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <section class="row">
             <div class="row-shift">
                 <h1>автомобильные чехлы</h1>
-                <h3>Мы шьем автомобильные чехлы и продем их оптовым покупателям</h3>
             </div>
 
             <div class="downloads">
@@ -65,6 +64,10 @@
             </div>
 
             <div class="row-shift">
+                <h3 class="sublink-wrap">
+                    Мы шьем автомобильные чехлы и&nbsp;продем их оптовым покупателям
+                    <a href="#" class="sublink">где купить в розницу?</a>
+                </h3>
                 <div class="goods-behaviour">
                     <span class="goods-behaviour-img goods-behaviour-img__cover"></span>
                     <ul class="goods-behaviour-list">
