потфолио - первое приближение

--- a/index.html
+++ b/index.html
@@ -121,7 +121,20 @@
         </section>
         <section class="row">
             <div class="portfolio">
-                <img src="static/i/gallery.png">
+                <div class="portfolio-covers-l">
+                    <a target="_blank" href="/static/portfolio/cover-l-1_b.jpg" class="portfolio-item portfolio-covers-l_1"></a>
+                    <a target="_blank" href="/static/portfolio/cover-l-2_b.jpg" class="portfolio-item portfolio-covers-l_2"></a>
+                    <a target="_blank" href="/static/portfolio/cover-l-3_b.jpg" class="portfolio-item portfolio-covers-l_3"></a>
+                </div>
+                <div class="portfolio-covers-r">
+                    <a target="_blank" href="/static/portfolio/cover-r-1_b.jpg" class="portfolio-item portfolio-covers-r_1"></a>
+                    <a target="_blank" href="/static/portfolio/cover-r-2_b.jpg" class="portfolio-item portfolio-covers-r_2"></a>
+                    <a target="_blank" href="/static/portfolio/cover-r-3_b.jpg" class="portfolio-item portfolio-covers-r_3"></a>
+                </div>
+                <div class="portfolio-covers-b">
+                    <a target="_blank" href="/static/portfolio/cover-b-1_b.jpg" class="portfolio-item portfolio-covers-b_1"></a>
+                    <a target="_blank" href="/static/portfolio/cover-b-2_b.jpg" class="portfolio-item portfolio-covers-b_2"></a>
+                </div>
             </div>
         </section>
         <section class="row">
