portfolio script draft

--- a/index.html
+++ b/index.html
@@ -120,20 +120,20 @@
             </div>
         </section>
         <section class="row">
-            <div class="portfolio">
+            <div class="portfolio js-portfolio">
                 <div class="portfolio-covers-l">
-                    <a target="_blank" href="/static/portfolio/cover-l-1_b.jpg" class="portfolio-item portfolio-covers-l_1"></a>
-                    <a target="_blank" href="/static/portfolio/cover-l-2_b.jpg" class="portfolio-item portfolio-covers-l_2"></a>
-                    <a target="_blank" href="/static/portfolio/cover-l-3_b.jpg" class="portfolio-item portfolio-covers-l_3"></a>
+                    <a target="_blank" href="static/portfolio/cover-l-1_b.jpg" class="portfolio-item portfolio-covers-l_1 js-portfolio-item"></a>
+                    <a target="_blank" href="static/portfolio/cover-l-2_b.jpg" class="portfolio-item portfolio-covers-l_2 js-portfolio-item"></a>
+                    <a target="_blank" href="static/portfolio/cover-l-3_b.jpg" class="portfolio-item portfolio-covers-l_3 js-portfolio-item"></a>
                 </div>
                 <div class="portfolio-covers-r">
-                    <a target="_blank" href="/static/portfolio/cover-r-1_b.jpg" class="portfolio-item portfolio-covers-r_1"></a>
-                    <a target="_blank" href="/static/portfolio/cover-r-2_b.jpg" class="portfolio-item portfolio-covers-r_2"></a>
-                    <a target="_blank" href="/static/portfolio/cover-r-3_b.jpg" class="portfolio-item portfolio-covers-r_3"></a>
+                    <a target="_blank" href="static/portfolio/cover-r-1_b.jpg" class="portfolio-item portfolio-covers-r_1 js-portfolio-item"></a>
+                    <a target="_blank" href="static/portfolio/cover-r-2_b.jpg" class="portfolio-item portfolio-covers-r_2 js-portfolio-item"></a>
+                    <a target="_blank" href="static/portfolio/cover-r-3_b.jpg" class="portfolio-item portfolio-covers-r_3 js-portfolio-item"></a>
                 </div>
                 <div class="portfolio-covers-b">
-                    <a target="_blank" href="/static/portfolio/cover-b-1_b.jpg" class="portfolio-item portfolio-covers-b_1"></a>
-                    <a target="_blank" href="/static/portfolio/cover-b-2_b.jpg" class="portfolio-item portfolio-covers-b_2"></a>
+                    <a target="_blank" href="static/portfolio/cover-b-1_b.jpg" class="portfolio-item portfolio-covers-b_1 js-portfolio-item"></a>
+                    <a target="_blank" href="static/portfolio/cover-b-2_b.jpg" class="portfolio-item portfolio-covers-b_2 js-portfolio-item"></a>
                 </div>
             </div>
         </section>
