--- a/stole.html
+++ b/stole.html
@@ -34,8 +34,8 @@
         </header>
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-item"><a href="#">автомобильные<br/>чехлы</a></li>
-                <li class="navigation-item"><a href="#" class="navigation-item__active">меховые<br/>накидки</a></li>
+                <li class="navigation-item"><a href="covers.html">автомобильные<br/>чехлы</a></li>
+                <li class="navigation-item"><a href="stole.html" class="navigation-item__active">меховые<br/>накидки</a></li>
                 <li class="navigation-item"><a href="#">автомобильные<br/>аксессуары</a></li>
                 <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
             </ul>
