--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="navigation-list">
                 <li class="navigation-item"><a href="covers.html" class="navigation-item__active">автомобильные<br/>чехлы</a></li>
                 <li class="navigation-item"><a href="stole.html">меховые<br/>накидки</a></li>
-                <li class="navigation-item"><a href="#">автомобильные<br/>аксессуары</a></li>
+                <li class="navigation-item"><a href="accessories.html">автомобильные<br/>аксессуары</a></li>
                 <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
             </ul>
         </nav>
