--- a/accessories.html
+++ b/accessories.html
@@ -80,7 +80,7 @@
             </div>
         </section>
         <section class="row">
-            <div class="portfolio js-portfolio">
+            <div class="portfolio portfolio__accs js-portfolio">
                 <div class="portfolio-accs">
                     <a target="_blank" href="static/portfolio/accs-1_b.jpg" class="portfolio-item portfolio-accs_1 js-portfolio-item"></a>
                     <a target="_blank" href="static/portfolio/accs-2_b.jpg" class="portfolio-item portfolio-accs_2 js-portfolio-item"></a>
