--- a/stole.html
+++ b/stole.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="header-navigation">
                     <a class="header-navigation-item" href="#">где купить в розницу</a>
-                    <a class="header-navigation-item" href="#">контакты</a>
+                    <a class="header-navigation-item" href="contacts.html">контакты</a>
                 </div>
             </div>
         </header>
