--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Мастерская Автограф</title>
         <link href="static/css/_autograph.css" rel="stylesheet" />
     </head>
-    <body>
+    <body class="main">
         <header class="header">
             <div class="header-ls">
                 <div class="header-contacts">
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="header-navigation">
-                    <a class="header-navigation-item" href="#">о нас</a>
+                    <a class="header-navigation-item header-navigation-item__active" href="#">о нас</a>
                     <a class="header-navigation-item" href="#">оптовикам</a>
                     <a class="header-navigation-item" href="#">гарантия</a>
                 </div>
@@ -34,131 +34,21 @@
         </header>
         <nav class="navigation">
             <ul class="navigation-list">
-                <li class="navigation-item"><a href="covers.html" class="navigation-item__active">автомобильные<br/>чехлы</a></li>
+                <li class="navigation-item"><a href="covers.html">автомобильные<br/>чехлы</a></li>
                 <li class="navigation-item"><a href="stole.html">меховые<br/>накидки</a></li>
                 <li class="navigation-item"><a href="accessories.html">автомобильные<br/>аксессуары</a></li>
                 <li class="navigation-item"><a href="#">чехлы на<br/>заказ</a></li>
             </ul>
         </nav>
-        <section class="row">
-            <div class="row-shift">
-                <h1>автомобильные чехлы</h1>
-            </div>
-
-            <div class="downloads">
-                <div class="downloads-catalog">
-                    <div class="downloads-title">каталог<br/>продукции</div>
-                    <a href="#" class="downloads-link downloads-link__excel">
-                        Скачать ознакомительный каталог
-                        <span class="downloads-link-info">25 Кb, Еxcel</span>
-                    </a>
-                    <div class="downloads-catalog-access">Для получения полного каталога с прайсом необходимо заполнить заявку оптовика</div>
-                    <a href="#" class="arrow">Заполнить заявку</a>
-                </div>
-                <div class="downloads-instruction">
-                    <a href="#" class="downloads-link downloads-link__pdf">
-                        Скачать инструкцию по установке чехлов
-                        <span class="downloads-link-info">17 Кb, PDF</span>
-                    </a>
-                </div>
-            </div>
-
-            <div class="row-shift">
-                <h3 class="sublink-wrap">
-                    Мы шьем автомобильные чехлы и&nbsp;продем их оптовым покупателям
-                    <a href="#" class="sublink">где купить в розницу?</a>
-                </h3>
-                <div class="goods-behaviour">
-                    <span class="goods-behaviour-img goods-behaviour-img__cover"></span>
-                    <ul class="goods-behaviour-list">
-                        <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_1">Наши чехлы шьются на основе лекало собственной разработки, поэтому они отличаются высокой точностью и учитывают особенности каждой модели</li>
-                        <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_2">Мы используем только качественные материалы и крепления</li>
-                        <li class="goods-behaviour-item goods-behaviour-icon goods-behaviour-icon__cover goods-behaviour-icon__cover_3">У нас очень богатый выбор цветов и рисунков материалов: экокожа, жаккард, алькантара</li>
-                    </ul>
-                </div>
-                <div class="goods-about">
-                    Все наши авточехлы модельные, то есть разработаны под конкретную марку автомобиля:
-                </div>
-            </div>
-        </section>
-        <section class="incut incut__covers">
-            <div class="row row-shift">
-                <ul class="covers-for">
-                    <li>Audi</li>
-                    <li>Honda</li>
-                    <li>Renault</li>
-                    <li>BMW</li>
-                    <li>Hyundai</li>
-                    <li>Skoda</li>
-                    <li>Chery</li>
-                    <li>Kia</li>
-                    <li>Subaru</li>
-                    <li>Chevrolet</li>
-                    <li>Rover</li>
-                    <li>Suzuki</li>
-                    <li>Citroen</li>
-                    <li>Mazda</li>
-                    <li>Toyota</li>
-                    <li>Daewoo</li>
-                    <li>Mercedes</li>
-                    <li>Volkswagen</li>
-                    <li>Fiat</li>
-                    <li>Mitsubishi</li>
-                    <li>ВАЗ (Лада)</li>
-                    <li>Ford</li>
-                    <li>Nissan</li>
-                    <li>ГАЗ</li>
-                    <li>Wall</li>
-                    <li>Opel</li>
-                    <li>УАЗ</li>
+        <section class="row row__main">
+            <div class="row-shift row-shift__main">
+                Мы шьем <a href="covers.html" class="goods-link">автомобильные чехлы</a> и <a href="stole.html" class="goods-link">меховые накидки</a> под собственным брендом и продаем их оптом.<sup class="main-where"><a href="#">где купить в розницу?</a></sup> Розничные покупатели могут изготовить у нас чехол на заказ,воспользовавшись специальным конструктором.
+                <ul class="main-services">
+                    <li class="main-services-item main-services-item__sewing">пошив высокого качества</li>
+                    <li class="main-services-item main-services-item__template">большое разнообразие материалов</li>
+                    <li class="main-services-item main-services-item__sewing">собственные лекало</li>
+                    <li class="main-services-item main-services-item__special">специальные условия для оптовых&nbsp;покупателей</li>
                 </ul>
-            </div>
-        </section>
-        <section class="row">
-            <div class="row-shift goods-info goods-info__covers">
-                В наших чехлах можно комбинировать материалы — экокожу и жаккард, экокожу и алькантара. Мы используем усиленные двойные швы что гарантирует надежность чехлов во время эксплуатации. Конструкция чехлов продумана таким образом, что бы, не нарушать заводскую функциональность салона.
-            </div>
-        </section>
-        <section class="row">
-            <div class="portfolio js-portfolio">
-                <div class="portfolio-covers-l">
-                    <a target="_blank" href="static/portfolio/cover-l-1_b.jpg" class="portfolio-item portfolio-covers-l_1 js-portfolio-item"></a>
-                    <a target="_blank" href="static/portfolio/cover-l-2_b.jpg" class="portfolio-item portfolio-covers-l_2 js-portfolio-item"></a>
-                    <a target="_blank" href="static/portfolio/cover-l-3_b.jpg" class="portfolio-item portfolio-covers-l_3 js-portfolio-item"></a>
-                </div>
-                <div class="portfolio-covers-r">
-                    <a target="_blank" href="static/portfolio/cover-r-1_b.jpg" class="portfolio-item portfolio-covers-r_1 js-portfolio-item"></a>
-                    <a target="_blank" href="static/portfolio/cover-r-2_b.jpg" class="portfolio-item portfolio-covers-r_2 js-portfolio-item"></a>
-                    <a target="_blank" href="static/portfolio/cover-r-3_b.jpg" class="portfolio-item portfolio-covers-r_3 js-portfolio-item"></a>
-                </div>
-                <div class="portfolio-covers-b">
-                    <a target="_blank" href="static/portfolio/cover-b-1_b.jpg" class="portfolio-item portfolio-covers-b_1 js-portfolio-item"></a>
-                    <a target="_blank" href="static/portfolio/cover-b-2_b.jpg" class="portfolio-item portfolio-covers-b_2 js-portfolio-item"></a>
-                </div>
-            </div>
-        </section>
-        <section class="row">
-            <div class="columns">
-                <div class="columns-item">
-                    <h2>Экокожа</h2>
-                    <p>Вид искусственной кожи, современный экологичный материал. Экокожа изготавливается путем нанесения на хлопчатобумажную тканную основу полиуретанового пленочного покрытия. Благодаря этому ткань не испытывает никаких механических нагрузок и растяжений, поэтому экокожа имеет очень подвижную структуру, замечательную мягкость и эластичность. Экокожа не трескается, не растягивается, и является очень прочным и износостойким материалом.</p>
-                    <p>В наших чехлах мы используем экокожу «АРИГОН»</p>
-                    <a href="#" class="columns-link">рекомендации по уходу</a>
-                </div>
-                <div class="columns-item">
-                    <h2>жаккард</h2>
-                    <p>Автомобильные чехлы из жаккарда весьма практичны – они легко чистятся с помощью пылесоса и хорошо переносят стирку при низкой температуре. Благодаря сложной структуре ткани, она практически не подвержена деформации. В результате чехлы долго сохраняют не только первоначальный цвет и фактуру, но и форму.</p>
-                    <a href="#" class="columns-link">рекомендации по уходу</a>
-                </div>
-                <div class="columns-item">
-                    <h2>Алькантара</h2>
-                    <p>Это продукт высокотехнологичного производства, эта ткань разработана японским ученым, и является уникальным материалом: пожаростойкая, надежная, долговечная, мягкая на ощупь, презентабельный вид. Алькантара не потеряет своего акуратного вида, на ней не появятся затяжки.</p>
-                    <a href="#" class="columns-link">рекомендации по уходу</a>
-                </div>
-            </div>
-            <div class="warranty">
-                <div class="warranty-separator"></div>
-                На все наши чехлы мы даем <b>гарантию 1 год</b>
             </div>
         </section>
         <footer class="footer">
