--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="header-navigation">
-                    <a class="header-navigation-item" href="#">о нас</a>
+                    <a class="header-navigation-item" href="index.html">о нас</a>
                     <a class="header-navigation-item" href="#">оптовикам</a>
                     <a class="header-navigation-item" href="#">гарантия</a>
                 </div>
