--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="header-navigation">
                     <a class="header-navigation-item header-navigation-item__active" href="index.html">о нас</a>
                     <a class="header-navigation-item" href="#">оптовикам</a>
-                    <a class="header-navigation-item" href="#">гарантия</a>
+                    <a class="header-navigation-item" href="warranty.html">гарантия</a>
                 </div>
             </div>
             <span class="header-logo">&nbsp;</span>
