add wholesalers page

--- a/warranty.html
+++ b/warranty.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="header-navigation">
                     <a class="header-navigation-item" href="index.html">о нас</a>
-                    <a class="header-navigation-item" href="#">оптовикам</a>
+                    <a class="header-navigation-item" href="wholesalers.html">оптовикам</a>
                     <a class="header-navigation-item header-navigation-item__active" href="warranty.html">гарантия</a>
                 </div>
             </div>
